# rtpmidid

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  CONTROL.md  Cargo.toml  DOCKER.md  Dockerfile  LICENSE.md  Makefile  README.librtpmidid.md  README.md  c-cpp.yml  compile_flags.txt  conanfile.txt  default.ini  docker-compose.yaml  requirements.txt  rtpmidi.py  rtpmidid-cli.1.md  rtpmidid.1.md  rtpmidid.conf  rtpmidid.yaml
.github/workflows/: build-rpm.yml  c-cpp.yml
cli/: Makefile  rtpmidi-cli.py  rtpmidid-cli.py
debian/: .gitignore  README  README.Debian  README.source  changelog  control  copyright  files  librtpmidid0.install  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  postinst  postrm.ex  preinst.ex  prerm  rtpmidid.doc-base.EX  rtpmidid.install  rtpmidid.postinst  rtpmidid.prerm  rtpmidid.service  rtpmidid.substvars  rules  update-changelog.py
docs/: ARCH.rust.md  Architecture.md  CONTROL.md  RFC6295_notes.md
include/rtpmidid/: buildoptions.hpp  buildoptions.hpp.in  exceptions.hpp  formatterhelper.hpp  iobytes.hpp  journal.hpp  logger.hpp  mdns.hpp  mdns_avahi.hpp  mdns_custom.hpp  mdns_empty.hpp  mdns_rtpmidi.hpp  netutils.hpp  network.hpp  networkaddress.hpp  packet.hpp  parse_buffer.hpp  poller.hpp  rtpclient.hpp  rtpclient_statemachine.hpp  rtpmidipacket.hpp  rtppeer.hpp  rtpserver.hpp  rtpserverpeer.hpp  signal.hpp  stats.hpp  udppeer.hpp  utils.hpp
lib/: CMakeLists.txt  STATEMACHINES.md  journal.cpp  logger.cpp  mdns_rtpmidi.cpp  netutils.cpp  netutils.hpp  networkaddress.cpp  poller.cpp  precompile.hpp  rtpclient.cpp  rtpclient.hpp  rtpclient_statemachine.cpp  rtpmidipacket.cpp  rtppeer.cpp  rtppeer.hpp  rtpserver.cpp  rtpserver.hpp  rtpserverpeer.cpp  stats.cpp  udppeer.cpp  utils.cpp
lib/mdns/: mdns.cpp  mdns.hpp  mdns_avahi.cpp  mdns_custom.cpp  mdns_empty.cpp  mdns_service.cpp  netutils.cpp  netutils.hpp
packaging/: Makefile  README.md  build-rpm.sh  build.sh
packaging/docker/: Dockerfile.debian-trixie  Dockerfile.fedora-43  Dockerfile.ubuntu-24.04  Dockerfile.ubuntu-25.10
packaging/rpm/: rtpmidid.spec
rust/: Cargo.toml
rust/src/: filemidi.rs  main.rs  midiinout.rs  midistream.rs  rtpmidiclient.rs  rtpmidiserver.rs  rtppeer.rs
scripts/: malloc.gdb  statemachine_to_cpp.py  valgrind.supp
src/: CMakeLists.txt  alsalistener.cpp  alsalistener.hpp  alsanetwork.cpp  alsapeer.cpp  alsawaiter.cpp  alsawaiter.hpp  alsaworker.cpp  alsaworker.hpp  argv.cpp  argv.hpp  aseq.cpp  aseq.hpp  compile_flags.txt  config.cpp  config.hpp  control_socket.cpp  control_socket.hpp  exceptions.hpp  factory.cpp  factory.hpp  hwautoannounce.cpp  hwautoannounce.hpp  ini.cpp  ini.hpp  json.cpp  json.hpp  json_fwd.hpp  local_alsa_listener.cpp  local_alsa_listener.hpp  local_alsa_multi_listener.cpp  local_alsa_multi_listener.hpp  local_alsa_peer.cpp  local_alsa_peer.hpp  local_alsa_waiter.cpp  local_alsa_waiter.hpp  local_alsa_worker.cpp  local_alsa_worker.hpp  local_devmidi_peer.cpp  local_devmidi_peer.hpp  (+59 more)
src/mdns/: mdns.cpp  mdns.hpp  mdns_service.cpp
src2/: CMakeLists.txt  alsalistener.cpp  alsalistener.hpp  alsanetwork.cpp  alsanetwork.hpp  alsapeer.cpp  alsapeer.hpp  alsawaiter.cpp  alsawaiter.hpp  alsaworker.cpp  alsaworker.hpp  argv.cpp  aseq.cpp  aseq.hpp  control_socket.cpp  control_socket.hpp  factory.cpp  factory.hpp  main.cpp  mididata.hpp  midipeer.hpp  midirouter.cpp  midirouter.hpp  rtpmidiclientworker.cpp  rtpmidiclientworker.hpp  rtpmidilistener.cpp  rtpmidilistener.hpp  rtpmidinetwork.cpp  rtpmidinetwork.hpp  rtpmidiremotehandler.cpp  rtpmidiremotehandler.hpp  rtpmidiserverpeer.cpp  rtpmidiserverpeer.hpp  rtpmidiserverworker.cpp  rtpmidiserverworker.hpp  rtpmidiworker.cpp  rtpmidiworker.hpp  rtppeer.cpp  rtppeer.hpp  settings.hpp  (+3 more)
tests/: CMakeLists.txt  README.md  test_case.hpp  test_mdns.cpp  test_midinormalizer.cpp  test_midirouter.cpp  test_midirouter2.cpp  test_misc.cpp  test_poller.cpp  test_rtpclient.cpp  test_rtpmidid.cpp  test_rtppeer.cpp  test_rtpserver.cpp  test_settings.cpp  test_signals.cpp  test_utils.cpp  test_utils.hpp  testcase.hpp
