[package]
name = "rtpmidid"
version = "0.1.0"
authors = ["David Moreno <dmoreno@coralbits.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "^3.2", features = ["derive"] }
log = "0.4.17"
env_logger = "0.10.0"
rand = "0.8"
byteorder = "1.4.3"
chrono = "0.4.23"