[package]
name = "rtpmidid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "^3.2", features = ["derive"] }
log = "0.4.17"
env_logger = "0.10.0"
chrono = "0.4.23"
async-trait = "0.1.61"
nix = "0.26.1"